Wed Jun 23 13:09:31 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/examples/Hello/descriptors/Plan.cdp
        * connectors/ami4ccm/examples/Hello/descriptors/run_test.pl
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Ports/Hello.mpc
        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Ports/Hello_defn.mpc
        Rename _defn projects, cleanup code.

Wed Jun 23 12:42:31 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender.mpc
        * connectors/ami4ccm/tests/AsynchT/Sender/AsynchT_Sender.mpc
        * connectors/ami4ccm/tests/DelReplyH/Sender/DelReplyH_Sender.mpc
        * connectors/ami4ccm/tests/Exceptions/Sender/ExceptionT_Sender.mpc
        * connectors/ami4ccm/tests/InterInArgs/Sender/InterInArgsT_Sender.mpc
        * connectors/ami4ccm/tests/InterMulti/Sender/InterMulti_Sender.mpc
        * connectors/ami4ccm/tests/InterOutArgs/Sender/InterOutArgsT_Sender.mpc
        * connectors/ami4ccm/tests/InterReturn/Sender/InterReturnT_Sender.mpc
        * connectors/ami4ccm/tests/NoReplyH/Sender/NoReplyH_Sender.mpc
        * connectors/ami4ccm/tests/OneProcess/Sender/OneProcess_Sender.mpc
        * connectors/ami4ccm/tests/OneReplyH/Sender/OneReplyH_Sender.mpc
        * connectors/ami4ccm/tests/SimplexMulti/Sender/UsesSM_Sender.mpc
        * connectors/ami4ccm/tests/UsesMulti/Sender/UsesMulti_Sender.mpc
        Remove obsolete conn_xxx_idl_gen

Wed Jun 23 12:16:31 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tutorials/Hello/Hello_asm/Ports/Hello_defn.mpc
        Add missing file.

Wed Jun 23 12:08:51 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
          Initialise pointer with 0
    
        * DAnCE/LocalityManager/Scheduler/Events/Install.cpp:
          When we get a CORBA exception, also log the _info from that exception
