@@ -13,6 +13,11 @@
 
 module ::CCM_DDS::Typed < ::DerivedType, ::DerivedTypeSeq> DerivedTypeConnector;
 
+interface foo
+{
+  void send (in long value);
+};
+
 connector MyEvent : DerivedTypeConnector::DDS_Event
 {
 };
@@ -20,5 +25,9 @@ connector MyEvent : DerivedTypeConnector::DDS_Event
 connector MyState : DerivedTypeConnector::DDS_State
 {
 };
+
+// connector MyOwn : CCM_DDS::DDS_TopicBase
+// {
+// };
 
 #endif
